Fixed font and dimensions of toggle-comments button + fixed clipping on author card's profile picture (#127)

--- a/client/src/styles/_article_header.scss
+++ b/client/src/styles/_article_header.scss
@@ -10,7 +10,7 @@
   background-color: $cool-blue;
   opacity: 0.8;
   height: 28px;
-  width: 160px;
+  width: 150px;
   margin: 0 auto;
   margin-bottom: 20px;
 }
@@ -19,6 +19,7 @@
 }
 
 .toggle-comments-text {
+  font-family: Cabin, san-sarif;
   font-size: 15px;
   position: relative;
   top: 2px;
@@ -28,6 +29,6 @@
 .toggle-comments-icon {
   font-size: 14px;
   position: relative;
-  left: 62px;
+  left: 57px;
   bottom: 23px;
 }
