--- a/client/src/styles/_comment.scss
+++ b/client/src/styles/_comment.scss
@@ -43,6 +43,15 @@
   top: 2px;
 }
 
+.author {
+  display: inline-block;
+  color: grey;
+  font-size: 20px;
+  position: relative;
+  padding-left: 30px;
+  top: 2px;
+}
+
 .comment-content {
   word-wrap: break-word;
   padding: 15px;
